--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interview in Progress</title>
-    <link rel="stylesheet" href="/static/interviewer.css">
+    <link rel="stylesheet" href="interviewer.css">
 </head>
 
 <body>
