--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div id="ai-video-section">
-                        <img id="ai-image" alt="AI Video" src="/static/interviewer.png">
+                        <img id="ai-image" alt="AI Video" src="interviewer.png">
                     </div>
                 </div>
             </section>
