--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </footer>
 
-    <script src="/static/interviewer.js"></script>
+    <script src="interviewer.js"></script>
 </body>
 
 </html>
